[package]
name = "rust-torrent-info"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6", features = ["multipart"] }
tokio = { version = "1.14.0", features = ["full"] }
serde_json = "1.0.70"
bendy = "0.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_bencode = "0.2.3"
serde_bencoded = "0.3.1"
serde_bytes = "0.11.7"
